# Postman_Deploy

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
FSM/: FSM.py  FSMState.py
common/: ctrlcomp.py  utils.py
deploy_mujoco/: deploy_mujoco.py  deploy_mujoco_keyboard_input.py
deploy_real/: deploy_real.py
docs/: sim2sim_guide.md
g1_description/: scene.xml
policy/box_transport/: BoxTransport.py  __init__.py
policy/box_transport/config/: BoxTransport.yaml
policy/box_transport/model/: box_transport_velocity.onnx
policy/box_transport_velocity/: BoxTransportVelocity.py
policy/box_transport_velocity/config/: BoxTransportVelocity.yaml
policy/box_transport_velocity/model/: policy.onnx
policy/dual_agent_box_trans_vel/: DualAgentBoxTransVel.py
policy/dual_agent_box_trans_vel/config/: DualAgentBoxTransVel.yaml
policy/dual_agent_box_trans_vel/model/: dual_agent_combined.onnx
policy/dual_agent_tracking/: DualAgentTracking.py
policy/dual_agent_tracking/config/: DualAgentTracking.yaml
policy/dual_agent_tracking/model/: dual_agent_combined.onnx
policy/dual_agent_tracking/motion/: walk_tracking_ref.npz
policy/dual_agent_velocity/: DualAgentVelocity.py
policy/fixedpose/: FixedPose.py
policy/gae_mimic/config/: GAE_Mimic.yaml
policy/loco_mode/: LocoMode.py
policy/loco_new/: LocoNew.py
policy/loco_new/config/: LocoNew.yaml
policy/loco_new/model/: policy_loco_new.pt
policy/loco_new_onnx/: LocoNewOnnx.py
policy/loco_new_onnx/config/: LocoNewOnnx.yaml
policy/loco_new_onnx/model/: policy_loco_new.onnx
policy/skill_cast/: SkillCast.py
refer/: BoxTransport-Sim2Sim-Integration.md  BoxTransport-Sim2Sim-Prompt.md  DualAgent-ONNX-Export-Guide.md  DualAgentTracking-Deploy-Real.md  DualAgentTracking-Sim2Real-Guide.md  DualAgentTracking-Sim2Sim-Integration.md  DualAgentVelocity-Sim2Sim-Integration.md  LocoNew-Sim2Sim-Integration.md  Sim2Sim-Ops-Guide.md  UV-Deploy-Setup.md
tools/: joystick_test.py  loco_new_parity_test.py
